test/runtime/fail/assignment/let_expected_equals.hy

// expect error: Expected `=` after identifier in `let`

let a "hello"
